--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -52,6 +52,7 @@ QGroupBox {
 }
 
 
+
 /*QGroupBox::title {
     subcontrol-origin: margin;
     subcontrol-position: top center; 
@@ -306,7 +307,7 @@ QGroupBox {
          <number>0</number>
         </property>
         <widget class="QWidget" name="main_p">
-         <layout class="QVBoxLayout" name="verticalLayout_9" stretch="2,1">
+         <layout class="QVBoxLayout" name="verticalLayout_9" stretch="1,5,2">
           <property name="topMargin">
            <number>0</number>
           </property>
@@ -316,6 +317,59 @@ QGroupBox {
           <property name="bottomMargin">
            <number>0</number>
           </property>
+          <item>
+           <widget class="QGroupBox" name="groupBox_25">
+            <property name="title">
+             <string/>
+            </property>
+            <layout class="QGridLayout" name="gridLayout_20">
+             <item row="0" column="0">
+              <layout class="QHBoxLayout" name="horizontalLayout_77">
+               <item>
+                <spacer name="horizontalSpacer_5">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+               <item>
+                <widget class="QLabel" name="label_38">
+                 <property name="text">
+                  <string>PLC 连接</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="connectPLCBtn">
+                 <property name="text">
+                  <string>连接</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <spacer name="horizontalSpacer_4">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+              </layout>
+             </item>
+            </layout>
+           </widget>
+          </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_56">
             <item>
@@ -2207,15 +2261,15 @@ QGroupBox {
              </widget>
             </item>
             <item>
-             <widget class="QGroupBox" name="groupBox_5">
+             <widget class="QGroupBox" name="groupBox_18">
               <property name="title">
                <string/>
               </property>
-              <layout class="QGridLayout" name="gridLayout_5">
+              <layout class="QGridLayout" name="gridLayout_19">
                <item row="0" column="0">
-                <layout class="QHBoxLayout" name="horizontalLayout_75">
+                <layout class="QHBoxLayout" name="horizontalLayout_74">
                  <item>
-                  <widget class="QLabel" name="label_11">
+                  <widget class="QLabel" name="label_10">
                    <property name="minimumSize">
                     <size>
                      <width>60</width>
@@ -2223,12 +2277,12 @@ QGroupBox {
                     </size>
                    </property>
                    <property name="text">
-                    <string>3#冷干机</string>
+                    <string>2#冷干机</string>
                    </property>
                   </widget>
                  </item>
                  <item>
-                  <widget class="QToolButton" name="dryerBtn3">
+                  <widget class="QToolButton" name="dryerBtn2">
                    <property name="text">
                     <string>...</string>
                    </property>
@@ -2253,15 +2307,15 @@ QGroupBox {
              </widget>
             </item>
             <item>
-             <widget class="QGroupBox" name="groupBox_18">
+             <widget class="QGroupBox" name="groupBox_5">
               <property name="title">
                <string/>
               </property>
-              <layout class="QGridLayout" name="gridLayout_19">
+              <layout class="QGridLayout" name="gridLayout_5">
                <item row="0" column="0">
-                <layout class="QHBoxLayout" name="horizontalLayout_74">
+                <layout class="QHBoxLayout" name="horizontalLayout_75">
                  <item>
-                  <widget class="QLabel" name="label_10">
+                  <widget class="QLabel" name="label_11">
                    <property name="minimumSize">
                     <size>
                      <width>60</width>
@@ -2269,12 +2323,12 @@ QGroupBox {
                     </size>
                    </property>
                    <property name="text">
-                    <string>2#冷干机</string>
+                    <string>3#冷干机</string>
                    </property>
                   </widget>
                  </item>
                  <item>
-                  <widget class="QToolButton" name="dryerBtn2">
+                  <widget class="QToolButton" name="dryerBtn3">
                    <property name="text">
                     <string>...</string>
                    </property>
@@ -2715,6 +2769,7 @@ QGroupBox {
     </item>
    </layout>
   </widget>
+  <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
