--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -46,7 +46,7 @@ padding: 0px;
 QGroupBox {
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                       stop: 0 #E0E0E0, stop: 1 #FFFFFF);
-    border: 2px solid gray;
+    border: 1px solid gray;
     border-radius: 5px;
     margin-top: 1ex; 
 }
@@ -333,6 +333,12 @@ QGroupBox {
            <property name="text">
             <string>主界面</string>
            </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <property name="autoExclusive">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item row="1" column="0">
@@ -351,6 +357,12 @@ QGroupBox {
            </property>
            <property name="text">
             <string>设备状态</string>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <property name="autoExclusive">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -371,6 +383,12 @@ QGroupBox {
            <property name="text">
             <string>设备控制</string>
            </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <property name="autoExclusive">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item row="3" column="0">
@@ -389,6 +407,12 @@ QGroupBox {
            </property>
            <property name="text">
             <string>操作日志</string>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <property name="autoExclusive">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -409,6 +433,12 @@ QGroupBox {
            <property name="text">
             <string>系统报警</string>
            </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <property name="autoExclusive">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
          <item row="5" column="0">
@@ -427,6 +457,12 @@ QGroupBox {
            </property>
            <property name="text">
             <string>历史数据</string>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <property name="autoExclusive">
+            <bool>true</bool>
            </property>
           </widget>
          </item>
@@ -447,6 +483,12 @@ QGroupBox {
            <property name="text">
             <string>用户管理</string>
            </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <property name="autoExclusive">
+            <bool>true</bool>
+           </property>
           </widget>
          </item>
         </layout>
@@ -458,7 +500,7 @@ QGroupBox {
          <string notr="true"/>
         </property>
         <property name="currentIndex">
-         <number>0</number>
+         <number>5</number>
         </property>
         <widget class="QWidget" name="main_p">
          <layout class="QVBoxLayout" name="verticalLayout_9" stretch="1,5,2">
