--- a/rc.qrc
+++ b/rc.qrc
@@ -11,5 +11,14 @@
         <file>images/btncheckon2.png</file>
         <file>images/btncheckon3.png</file>
         <file>images/log.ico</file>
+        <file>images/10442511021.png</file>
+        <file>images/g21.png</file>
+        <file>images/g22.png</file>
+        <file>images/kyj.png</file>
+        <file>images/kyj-open.gif</file>
+        <file>images/lgj.png</file>
+        <file>images/lgj-open.gif</file>
+        <file>images/valve.png</file>
+        <file>images/valve-open.png</file>
     </qresource>
 </RCC>
