修改曲线数据展示，隐藏加载压力和卸载压差的曲线，重新添加新的空压机-排气压力；冷干机-露点温度的压力曲线。

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -475,7 +475,7 @@ QToolButton{
          <string notr="true"/>
         </property>
         <property name="currentIndex">
-         <number>7</number>
+         <number>8</number>
         </property>
         <widget class="QWidget" name="main_p">
          <layout class="QVBoxLayout" name="verticalLayout_15" stretch="1">
@@ -4584,6 +4584,167 @@ QToolButton{
              </item>
             </layout>
            </widget>
+          </item>
+         </layout>
+        </widget>
+        <widget class="QWidget" name="runningChart_p2">
+         <layout class="QGridLayout" name="gridLayout_25" rowstretch="1,4,4">
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="rightMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <property name="horizontalSpacing">
+           <number>0</number>
+          </property>
+          <item row="0" column="0">
+           <widget class="QGroupBox" name="groupBox_30">
+            <property name="title">
+             <string/>
+            </property>
+            <layout class="QGridLayout" name="gridLayout_24">
+             <item row="0" column="0">
+              <layout class="QHBoxLayout" name="horizontalLayout_95">
+               <item>
+                <widget class="QLabel" name="label_157">
+                 <property name="text">
+                  <string>开始时间</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QDateEdit" name="runningChartS_2">
+                 <property name="showGroupSeparator" stdset="0">
+                  <bool>true</bool>
+                 </property>
+                 <property name="calendarPopup">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QLabel" name="label_158">
+                 <property name="text">
+                  <string>开始时间</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QDateEdit" name="runningChartE_2">
+                 <property name="showGroupSeparator" stdset="0">
+                  <bool>true</bool>
+                 </property>
+                 <property name="calendarPopup">
+                  <bool>true</bool>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QComboBox" name="compressorNO_2">
+                 <property name="minimumSize">
+                  <size>
+                   <width>100</width>
+                   <height>0</height>
+                  </size>
+                 </property>
+                 <property name="maximumSize">
+                  <size>
+                   <width>100</width>
+                   <height>16777215</height>
+                  </size>
+                 </property>
+                 <item>
+                  <property name="text">
+                   <string>选择空压机</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string>1#空压机</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string>2#空压机</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string>3#空压机</string>
+                  </property>
+                 </item>
+                </widget>
+               </item>
+               <item>
+                <widget class="QComboBox" name="dryerNO">
+                 <property name="minimumSize">
+                  <size>
+                   <width>100</width>
+                   <height>0</height>
+                  </size>
+                 </property>
+                 <property name="maximumSize">
+                  <size>
+                   <width>100</width>
+                   <height>16777215</height>
+                  </size>
+                 </property>
+                 <item>
+                  <property name="text">
+                   <string>选择冷干机</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string>1#冷干机</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string>2#冷干机</string>
+                  </property>
+                 </item>
+                 <item>
+                  <property name="text">
+                   <string>3#冷干机</string>
+                  </property>
+                 </item>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="loadDataBtn_2">
+                 <property name="text">
+                  <string>加载</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <spacer name="horizontalSpacer_13">
+                 <property name="orientation">
+                  <enum>Qt::Horizontal</enum>
+                 </property>
+                 <property name="sizeHint" stdset="0">
+                  <size>
+                   <width>40</width>
+                   <height>20</height>
+                  </size>
+                 </property>
+                </spacer>
+               </item>
+              </layout>
+             </item>
+            </layout>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QChartView" name="P2Widget" native="true"/>
+          </item>
+          <item row="2" column="0">
+           <widget class="QChartView" name="dewPointTWidget" native="true"/>
           </item>
          </layout>
         </widget>
